# Task_2

./: CMakeLists.txt  README.md  Task_2.cpp  Task_2_1.cpp  ccl_algorithm.cpp  ccl_algorithm.h  frame_rectangle.cpp  frame_rectangle.h  niblack_algorithm.cpp  niblack_algorithm.h  test1  vec_methods.cpp  vec_methods.h
